service.yaml
apiVersion: v1
kind: Service
metadata:
  name: super-sudoku-jenkins-service
  namespace: super-sudoku-jenkins
spec:
  selector:
    app: super-sudoku-jenkins
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
